--- a/app/src/main/res/layout/activity_chatting.xml
+++ b/app/src/main/res/layout/activity_chatting.xml
@@ -10,24 +10,76 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:background="@color/colorPrimary"
-            android:theme="@style/MyActionBar2"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:text="김찬열 (26)"
-                android:textSize="14dp"
-                android:textColor="@color/colorNormal"
-                android:fontFamily="@font/nanumgothic_font_family"
-                android:textStyle="bold">
-            </TextView>
-        </android.support.v7.widget.Toolbar>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="52dp"
+                android:layout_marginBottom="48dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                </LinearLayout>
+            </ScrollView>
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="52dp"
+                android:background="@color/colorPrimary"
+                android:theme="@style/MyActionBar2"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:text="김찬열 (26)"
+                    android:textSize="14dp"
+                    android:textColor="@color/colorNormal"
+                    android:fontFamily="@font/nanumgothic_font_family"
+                    android:textStyle="bold">
+                </TextView>
+            </android.support.v7.widget.Toolbar>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_gravity="bottom"
+                android:orientation="horizontal">
+                <ImageButton
+                    android:layout_width="56dp"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/button_attach_file"
+                    android:background="?android:selectableItemBackground"/>
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:hint="메시지를 입력하세요"
+                        android:textSize="14dp"
+                        android:background="@null"
+                        android:fontFamily="@font/roboto_font_family"
+                        android:layout_marginRight="68dp"
+                        android:paddingLeft="6dp"
+                        android:paddingRight="6dp"
+                        />
+                    <ImageButton
+                        android:layout_width="68dp"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="right"
+                        android:src="@drawable/button_send_message"
+                        android:background="?android:selectableItemBackground"/>
+                </FrameLayout>
+            </LinearLayout>
+        </FrameLayout>
     </LinearLayout>
+
 
 </android.support.constraint.ConstraintLayout>
