--- a/app/src/main/res/layout/activity_main_onboarding.xml
+++ b/app/src/main/res/layout/activity_main_onboarding.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,15 +9,15 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <android.support.v4.view.ViewPager
+        <androidx.viewpager.widget.ViewPager
             android:id="@+id/screen_viewpager"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-        </android.support.v4.view.ViewPager>
+        </androidx.viewpager.widget.ViewPager>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <android.support.design.widget.TabLayout
+            <com.google.android.material.tabs.TabLayout
                 app:tabBackground="@drawable/page_indicator_selector"
                 app:tabIndicatorHeight="0dp"
                 app:tabRippleColor="@null"
@@ -27,7 +27,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_alignParentBottom="true"
                 android:layout_marginBottom="117dp">
-            </android.support.design.widget.TabLayout>
+            </com.google.android.material.tabs.TabLayout>
             <ImageButton
                 android:id="@+id/btn_start"
                 android:layout_width="wrap_content"
@@ -41,4 +41,4 @@
         </RelativeLayout>
     </FrameLayout>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
