--- a/app/src/main/res/layout/activity_chatting.xml
+++ b/app/src/main/res/layout/activity_chatting.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -23,10 +23,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
-
+                    <ListView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"></ListView>
                 </LinearLayout>
             </ScrollView>
-            <android.support.v7.widget.Toolbar
+            <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="52dp"
@@ -43,7 +45,7 @@
                     android:fontFamily="@font/nanumgothic_font_family"
                     android:textStyle="bold">
                 </TextView>
-            </android.support.v7.widget.Toolbar>
+            </androidx.appcompat.widget.Toolbar>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
@@ -54,7 +56,7 @@
                     android:layout_height="match_parent"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/button_attach_file"
+                    android:src="@drawable/btn_call_manager"
                     android:background="?android:selectableItemBackground"/>
                 <FrameLayout
                     android:layout_width="match_parent"
@@ -82,4 +84,4 @@
     </LinearLayout>
 
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
