--- a/app/src/main/res/layout/fragment_received_meeting.xml
+++ b/app/src/main/res/layout/fragment_received_meeting.xml
@@ -44,12 +44,12 @@
                 android:layout_centerVertical="true"
                 android:fontFamily="@font/nanumgothic_font_family"/>
         </RelativeLayout>
-        <android.support.v4.view.ViewPager
+        <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="58dp">
-        </android.support.v4.view.ViewPager>
+        </androidx.viewpager.widget.ViewPager>
     </LinearLayout>
     <LinearLayout
         android:id="@+id/empty_view"
