--- a/app/src/main/res/layout/fragment_sent_meeting.xml
+++ b/app/src/main/res/layout/fragment_sent_meeting.xml
@@ -45,12 +45,12 @@
                 android:fontFamily="@font/nanumgothic_font_family"/>
         </RelativeLayout>
 
-        <android.support.v4.view.ViewPager
+        <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewPager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="45dp"></android.support.v4.view.ViewPager>
+            android:layout_marginTop="45dp"></androidx.viewpager.widget.ViewPager>
     </LinearLayout>
     <LinearLayout
         android:id="@+id/empty_view"
