--- a/app/src/main/res/layout/activity_chatting.xml
+++ b/app/src/main/res/layout/activity_chatting.xml
@@ -24,6 +24,7 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
                     <ListView
+                        android:id="@+id/list_message"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"></ListView>
                 </LinearLayout>
