--- a/app/src/main/res/drawable/top_left_rounded_red.xml
+++ b/app/src/main/res/drawable/top_left_rounded_red.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorPrimary"/>
+    <solid android:color="@color/colorWoman"/>
     <stroke android:width="0.4dp" android:color="@color/colorWoman" />
     <corners
         android:topLeftRadius="10dp"
