--- a/app/src/main/res/layout/chatting_message_recv_man.xml
+++ b/app/src/main/res/layout/chatting_message_recv_man.xml
@@ -32,7 +32,7 @@
                 android:fontFamily="@font/binggrae_font_family"
                 android:textSize="9dp"
                 android:textStyle="bold"
-                android:textColor="@color/colorMan"/>
+                android:textColor="#298CFF"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -65,7 +65,7 @@
                             android:text="안녕하세요!"
                             android:fontFamily="@font/binggrae_font_family"
                             android:paddingRight="10dp"
-                            android:textSize="10dp" />
+                            android:textSize="14dp" />
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
