--- a/app/src/main/res/layout/chatting_message_recv_woman.xml
+++ b/app/src/main/res/layout/chatting_message_recv_woman.xml
@@ -32,7 +32,7 @@
                 android:fontFamily="@font/binggrae_font_family"
                 android:textSize="9dp"
                 android:textStyle="bold"
-                android:textColor="@color/colorWoman"/>
+                android:textColor="#FE528E"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
