--- a/app/src/main/res/layout/profile_card.xml
+++ b/app/src/main/res/layout/profile_card.xml
@@ -34,115 +34,116 @@
                 android:background="@null"
                 />
         </FrameLayout>
-        <LinearLayout
-            android:layout_width="219.5dp"
-            android:layout_height="174dp"
-            android:orientation="vertical"
-            android:background="@drawable/profile_card_bg"
-            android:layout_marginTop="12.65dp"
-            android:layout_gravity="right"
-            >
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16.2dp"
-                android:gravity="center_horizontal">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:orientation="horizontal"
-                    android:layout_gravity="center_horizontal">
-                    <TextView
-                        android:id="@+id/name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text="김찬열"
-                        android:textStyle="bold"
-                        android:textColor="#000000"
-                        android:textSize="25dp"
-                        android:gravity="center_vertical"
-                        android:fontFamily="@font/roboto_font_family"
-                        android:padding="0dp"
-                        >
-                    </TextView>
-                    <EditText
-                        android:id="@+id/et_nickname"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:hint="김찬열"
-                        android:textStyle="bold"
-                        android:textColor="@color/colorBlack"
-                        android:fontFamily="@font/roboto_font_family"
-                        android:paddingBottom="8dp"
-                        android:paddingRight="0dp"
-                        android:paddingLeft="0dp"
-                        android:textSize="25dp"
-                        android:gravity="bottom"
-                        android:visibility="gone"
 
-                        >
-                    </EditText>
-                    <TextView
-                        android:id="@+id/age"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:text=" (24)"
-                        android:textStyle="bold"
-                        android:textColor="#000000"
-                        android:textSize="25dp"
-                        android:fontFamily="@font/roboto_font_family"
-                        android:padding="0dp"
-                        android:gravity="center_vertical">
-                    </TextView>
-                </LinearLayout>
+            <LinearLayout
+                android:layout_width="219.5dp"
+                android:layout_height="174dp"
+                android:layout_gravity="right"
+                android:layout_marginTop="12.65dp"
+                android:background="@drawable/profile_card_bg"
+                android:orientation="vertical">
 
-            </FrameLayout>
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="17dp"
-                android:layout_gravity="center_horizontal">
-                <ImageButton
-                    android:id="@+id/btn_edit_nickname"
-                    android:layout_width="wrap_content"
+                <FrameLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/button_edit_nickname"
-                    android:background="@null"
-                    android:layout_gravity="center_horizontal"
-                    />
+                    android:layout_marginTop="16.2dp"
+                    android:gravity="center_horizontal">
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="50dp"
+                        android:layout_gravity="center_horizontal"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:fontFamily="@font/roboto_font_family"
+                            android:gravity="center_vertical"
+                            android:padding="0dp"
+                            android:text="김찬열"
+                            android:textColor="#000000"
+                            android:textSize="25dp"
+                            android:textStyle="bold"></TextView>
+
+                        <EditText
+                            android:id="@+id/et_nickname"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:fontFamily="@font/roboto_font_family"
+                            android:gravity="bottom"
+                            android:hint="김찬열"
+                            android:paddingLeft="0dp"
+                            android:paddingRight="0dp"
+                            android:paddingBottom="8dp"
+                            android:textColor="@color/colorBlack"
+                            android:textSize="25dp"
+                            android:textStyle="bold"
+                            android:visibility="gone"
+
+                            ></EditText>
+
+                        <TextView
+                            android:id="@+id/age"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:fontFamily="@font/roboto_font_family"
+                            android:gravity="center_vertical"
+                            android:padding="0dp"
+                            android:text=" (24)"
+                            android:textColor="#000000"
+                            android:textSize="25dp"
+                            android:textStyle="bold"></TextView>
+                    </LinearLayout>
+
+                </FrameLayout>
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="17dp"
+                    android:layout_gravity="center_horizontal">
+
+                    <ImageButton
+                        android:id="@+id/btn_edit_nickname"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:background="@null"
+                        android:src="@drawable/button_edit_nickname" />
+
+                    <TextView
+                        android:id="@+id/tv_available_nickname"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_horizontal"
+                        android:text="사용 가능합니다."
+                        android:textColor="@color/colorBlue"
+                        android:textSize="13dp"
+                        android:visibility="gone"></TextView>
+                </FrameLayout>
+
                 <TextView
-                    android:id="@+id/tv_available_nickname"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="사용 가능합니다."
-                    android:textSize="13dp"
-                    android:textColor="@color/colorBlue"
-                    android:visibility="gone"
-                    android:layout_gravity="center_horizontal"
-                    >
-                </TextView>
-            </FrameLayout>
-            <TextView
-                android:id="@+id/company"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="연세대학교"
-                android:textColor="#000000"
-                android:textSize="14dp"
-                android:gravity="center_horizontal"
-                android:layout_marginTop="15dp"
-                android:fontFamily="@font/roboto_font_family">
-            </TextView>
-            <TextView
-                android:id="@+id/department"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="전기전자공학부"
-                android:textColor="#000000"
-                android:textSize="14dp"
-                android:gravity="center_horizontal"
-                android:fontFamily="@font/roboto_font_family">
-            </TextView>
-        </LinearLayout>
+                    android:id="@+id/company"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:fontFamily="@font/roboto_font_family"
+                    android:gravity="center_horizontal"
+                    android:text="연세대학교"
+                    android:textColor="#000000"
+                    android:textSize="14dp"></TextView>
+
+                <TextView
+                    android:id="@+id/department"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_font_family"
+                    android:gravity="center_horizontal"
+                    android:text="전기전자공학부"
+                    android:textColor="#000000"
+                    android:textSize="14dp"></TextView>
+            </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
