--- a/app/src/main/res/layout/activity_chatting.xml
+++ b/app/src/main/res/layout/activity_chatting.xml
@@ -29,7 +29,8 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recyclerChat"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="13dp">
                 </androidx.recyclerview.widget.RecyclerView>
             </com.google.android.material.appbar.CollapsingToolbarLayout>
             <!--/ScrollView-->
