--- a/app/src/main/res/layout/chatting_message_recv_manager.xml
+++ b/app/src/main/res/layout/chatting_message_recv_manager.xml
@@ -4,8 +4,9 @@
     android:id="@+id/bg"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_marginTop="13dp"
     android:layout_marginLeft="18dp"
+    android:paddingBottom="13dp"
+
     >
     <RelativeLayout
         android:layout_width="match_parent"
