--- a/app/src/main/res/layout/chatting_message_sent_man.xml
+++ b/app/src/main/res/layout/chatting_message_sent_man.xml
@@ -4,7 +4,7 @@
     android:id="@+id/bg"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_marginTop="13dp"
+    android:paddingBottom="13dp"
     android:layout_marginRight="18dp"
     >
     <RelativeLayout
