--- a/app/src/main/res/layout/fragment_wlist.xml
+++ b/app/src/main/res/layout/fragment_wlist.xml
@@ -117,12 +117,15 @@
         </LinearLayout>
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginTop="21dp"
+            android:paddingBottom="21dp">
             <LinearLayout
                 android:id="@+id/wating_card_root"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
+
                 android:background="#FFFFFF">
                 <!--com.yamigu.yamigu_app.CustomLayout.WaitingTeamCard2
                     android:layout_width="wrap_content"
