--- a/app/src/main/res/layout/meeting_team_wlist.xml
+++ b/app/src/main/res/layout/meeting_team_wlist.xml
@@ -2,11 +2,11 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/bg"
-    android:layout_height="222dp"
+    android:layout_height="235dp"
     android:layout_width="351.8dp"
     android:orientation="vertical"
     android:layout_gravity="center_horizontal"
-    android:layout_marginTop="21dp"
+    android:paddingBottom="21dp"
     >
     <FrameLayout
         android:layout_width="match_parent"
