--- a/app/src/main/res/layout/activity_chatting.xml
+++ b/app/src/main/res/layout/activity_chatting.xml
@@ -30,7 +30,8 @@
                     android:id="@+id/recyclerChat"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="13dp">
+                    android:layout_marginTop="13dp"
+                    android:paddingBottom="21dp">>
                 </androidx.recyclerview.widget.RecyclerView>
             </com.google.android.material.appbar.CollapsingToolbarLayout>
             <!--/ScrollView-->
