--- a/app/src/main/res/layout/chatting_message_recv_manager.xml
+++ b/app/src/main/res/layout/chatting_message_recv_manager.xml
@@ -58,17 +58,21 @@
                             android:layout_width="10dp"
                             android:layout_height="match_parent">
                         </LinearLayout>
-                        <TextView
-                            android:id="@+id/chatting_content"
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:maxWidth="230dp"
-                            android:text="안녕하세요 :)\n미팅 진행을 도와줄 매칭 매니저 sub입니다.\n\n아래 내용을 꼭 참고해주세요\n*채팅내에서 자유롭게 약속을 수정하셔도 됩니다.
+                            android:paddingRight="10dp">
+                            <TextView
+                                android:id="@+id/chatting_content"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:maxWidth="210dp"
+                                android:text="안녕하세요 :)\n미팅 진행을 도와줄 매칭 매니저 sub입니다.\n\n아래 내용을 꼭 참고해주세요\n*채팅내에서 자유롭게 약속을 수정하셔도 됩니다.
     \n*개인 연락처 교환시 야미구 미팅에서 벗어나 모든 책임 및 환불제도에서 제외됩니다.
     \n\n매니저가 필요하거나 궁금한점이 생기면 언제든 우측 상단 아이콘을 눌러주세요!"
-                            android:fontFamily="@font/binggrae_font_family"
-                            android:paddingRight="10dp"
-                            android:textSize="10dp" />
+                                android:fontFamily="@font/binggrae_font_family"
+                                android:textSize="10dp" />
+                        </LinearLayout>
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
