--- a/app/src/main/res/layout/chatting_message_recv_manager_auto2.xml
+++ b/app/src/main/res/layout/chatting_message_recv_manager_auto2.xml
@@ -4,8 +4,9 @@
     android:id="@+id/bg"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
+    android:layout_marginLeft="18dp"
     android:paddingBottom="13dp"
-    android:layout_marginRight="18dp"
+
     >
     <RelativeLayout
         android:layout_width="match_parent"
@@ -17,48 +18,31 @@
             android:layout_width="42dp"
             android:layout_height="42dp"
             android:src="@drawable/user_profile_no_img"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"/>
+            android:layout_alignParentTop="true"/>
         <LinearLayout
             android:id="@+id/chatting_wrapper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_toLeftOf="@id/iv_profile"
-            android:layout_marginRight="10dp">
+            android:layout_marginLeft="51dp"
+            android:orientation="vertical">
             <TextView
                 android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="김찬열"
+                android:text="야미구 매니저 sub"
                 android:fontFamily="@font/binggrae_font_family"
                 android:textSize="9dp"
                 android:textStyle="bold"
-                android:textColor="@color/colorManB"
-                android:layout_gravity="right"
-                />
+                android:textColor="@color/colorPoint"/>
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:layout_gravity="right"
-                >
-                <TextView
-                    android:id="@+id/time"
-                    android:layout_width="51dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:text="오전 04:34"
-                    android:textSize="10dp"
-                    android:fontFamily="@font/roboto_font_family"
-                    android:textColor="@color/colorGray"
-                    android:layout_marginLeft="6dp"
-                    />
+                android:orientation="horizontal">
                 <LinearLayout
                     android:id="@+id/chatting_box"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/top_right_rounded_blue"
+                    android:background="@drawable/top_left_rounded_orange"
                     android:orientation="vertical"
                     android:layout_marginTop="3dp"
                     >
@@ -74,26 +58,34 @@
                             android:layout_width="10dp"
                             android:layout_height="match_parent">
                         </LinearLayout>
-                        <LinearLayout
+                        <TextView
+                            android:id="@+id/chatting_content"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:paddingRight="10dp">
-                            <TextView
-                                android:id="@+id/chatting_content"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:maxWidth="210dp"
-                                android:text="안녕하세요!"
-                                android:fontFamily="@font/nanumgothic_font_family"
-                                android:textSize="10dp" />
-                        </LinearLayout>
+                            android:maxWidth="210dp"
+                            android:text="안녕하세요 :)\n미팅 진행을 도와줄 매칭 매니저 sub입니다.\n\n아래 내용을 꼭 참고해주세요\n*채팅내에서 자유롭게 약속을 수정하셔도 됩니다.
+    \n*개인 연락처 교환시 야미구 미팅에서 벗어나 모든 책임 및 환불제도에서 제외됩니다.
+    \n\n매니저가 필요하거나 궁금한점이 생기면 언제든 우측 상단 아이콘을 눌러주세요!"
+                            android:fontFamily="@font/binggrae_font_family"
+                            android:paddingRight="10dp"
+                            android:textSize="10dp" />
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="10dp">
                     </LinearLayout>
                 </LinearLayout>
-
+                <TextView
+                    android:id="@+id/time"
+                    android:layout_width="51dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:text="오전 04:34"
+                    android:textSize="10dp"
+                    android:fontFamily="@font/roboto_font_family"
+                    android:textColor="@color/colorGray"
+                    android:layout_marginLeft="6dp"
+                    />
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
